feat: add tenant model and API endpoints

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -6,6 +6,7 @@ provider:
   region: us-east-1
   environment:
     PROPERTIES_TABLE: ${self:service}-properties-${self:provider.stage}
+    TENANTS_TABLE: ${self:service}-tenants-${self:provider.stage}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -26,6 +27,14 @@ functions:
           method: any
           cors: true
 
+  tenants:
+    handler: src/handlers/tenants.handler
+    events:
+      - http:
+          path: tenants
+          method: any
+          cors: true
+
 resources:
   Resources:
     PropertiesTable:
@@ -37,5 +46,17 @@ resources:
             AttributeType: S
         KeySchema:
           - AttributeName: propertyId
+            KeyType: HASH
+        BillingMode: PAY_PER_REQUEST
+
+    TenantsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ${self:provider.environment.TENANTS_TABLE}
+        AttributeDefinitions:
+          - AttributeName: tenantId
+            AttributeType: S
+        KeySchema:
+          - AttributeName: tenantId
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
